--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "my-worker"]
 	path = my-worker
-	url = https://github.com/<your-username>/<your-worker-repo>.git
+	url = https://github.com/needlesanddials1/buiz-website.git
